--- a/config/slicemk_ergodox_dongle.conf
+++ b/config/slicemk_ergodox_dongle.conf
@@ -1,4 +1,4 @@
 # If you are using a dongle, custom ZMK configuration options should go in this
 # file. If you are not using a dongle (using the left as central), this file is
 # ignored.
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO y
